# web_shop_crud

./: .env.example  .gitignore  Cargo.toml
docker/: .gitignore
docker/local/: docker-compose.yml
src/: main.rs
src/domains/player/: mod.rs  player_controller.rs  player_service.rs
src/repository/: mod.rs
src/repository/domains/players/: mod.rs  player_repository.rs
src/repository/domains/players/dtos/: create_player_dto.rs  get_player_dto.rs  mod.rs
src/repository/mongo_db/: connection_factory.rs  mod.rs
src/repository/mongo_db/collections/players/: mod.rs  player_repository.rs  player_schema.rs  players_mongodb.rs
