[package]
name = "web_shop_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.163"
async-trait = "0.1.68"
env_logger = "0.10.0"

[dependencies.tokio]
version = "1.28.1"
features = ["full"]

[dependencies.mongodb]
version = "2.5.0"
